Finish internal transfer
